force-app/main/default/objects/Opportunity/fields/Integrator__c.field-meta.xml
<CustomField>
    <fullName>Integrator__c</fullName>
    <label>Integrator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>