force-app/main/default/objects/Opportunity/fields/IO_Amount_Sum__c.field-meta.xml
<CustomField>
    <fullName>IO_Amount_Sum__c</fullName>
    <label>IO Amount Sum</label>
    <summarizedField>Insertion_Order__c.Opp_IO_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Insertion_Order__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>1. Standard IO, Locked Standard IO</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Insertion_Order__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Insertion_Order__c.Opportunity_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>