force-app/main/default/objects/Opportunity/fields/IO_Amount_Sum_Final__c.field-meta.xml
<CustomField>
    <fullName>IO_Amount_Sum_Final__c</fullName>
    <formula>( IO_Amount_Sum__c  +  IO_Amount_Sum_Positive__c +Sum_of_Charges__c) -  IO_Amount_Sum_Negative__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IO Amount Sum Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>