force-app/main/default/objects/Opportunity/fields/IO_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>IO_Conversion_Rate__c</fullName>
    <description>Conversion Rate at the time of finance approval for opportunity</description>
    <label>IO Conversion Rate</label>
    <precision>14</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>