force-app/main/default/objects/Opportunity/fields/IO_End_Date__c.field-meta.xml
<CustomField>
    <fullName>IO_End_Date__c</fullName>
    <description>End date of IO</description>
    <inlineHelpText>End date of IO</inlineHelpText>
    <label>IO End Date</label>
    <type>Date</type>
</CustomField>