force-app/main/default/objects/Opportunity/fields/IO_Override_By__c.field-meta.xml
<CustomField>
    <fullName>IO_Override_By__c</fullName>
    <label>IO Override By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>