force-app/main/default/objects/Opportunity/fields/IO_Received_By__c.field-meta.xml
<CustomField>
    <fullName>IO_Received_By__c</fullName>
    <label>IO Received By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>