force-app/main/default/objects/Opportunity/fields/IO_Value__c.field-meta.xml
<CustomField>
    <fullName>IO_Value__c</fullName>
    <label>IO Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>