force-app/main/default/objects/Opportunity/fields/Is_Exchange_Opty__c.field-meta.xml
<CustomField>
    <fullName>Is_Exchange_Opty__c</fullName>
    <formula>IF(( Account.RecordType.DeveloperName = &apos;Partner&apos; &amp;&amp; ISPICKVAL(Account.Type, &apos;Demand Side Platform DSP&apos;)), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Exchange Opty?</label>
    <type>Checkbox</type>
</CustomField>