force-app/main/default/objects/Opportunity/fields/Is_Free_Trial_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Free_Trial_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will capture the AM’s choice about creation of free trial IO.</description>
    <label>Is Free Trial Required?</label>
    <type>Checkbox</type>
</CustomField>