force-app/main/default/objects/Opportunity/fields/Is_Quote_Synced__c.field-meta.xml
<CustomField>
    <fullName>Is_Quote_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will capture if the opportunity products are manually created or synced from quote</description>
    <label>Is Quote Synced</label>
    <type>Checkbox</type>
</CustomField>