force-app/main/default/objects/Opportunity/fields/Is_self_serve__c.field-meta.xml
<CustomField>
    <fullName>Is_self_serve__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Self-Serve Functionality - Symphony</description>
    <label>Is self-serve</label>
    <type>Checkbox</type>
</CustomField>