force-app/main/default/objects/Opportunity/fields/Is_Self_Serve_AR__c.field-meta.xml
<CustomField>
    <fullName>Is_Self_Serve_AR__c</fullName>
    <description>This field will capture whether the opportunity is created for self serve AR account or not.</description>
    <formula>Account.Is_self_serve__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Self-Serve</label>
    <type>Checkbox</type>
</CustomField>