force-app/main/default/objects/Opportunity/fields/Last_Activity_Date_PB__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date_PB__c</fullName>
    <label>Last Activity Date PB</label>
    <type>Date</type>
</CustomField>