force-app/main/default/objects/Opportunity/fields/Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Launch_Date__c</fullName>
    <inlineHelpText>Date when the first campaign related to this opportunity is going to start</inlineHelpText>
    <label>Launch Date</label>
    <type>Date</type>
</CustomField>