force-app/main/default/objects/Opportunity/fields/Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail__c</fullName>
    <label>Lead Source Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AdRoll</fullName>
            </value>
            <value>
                <fullName>AdWords</fullName>
            </value>
            <value>
                <fullName>BuySellAds</fullName>
            </value>
            <value>
                <fullName>MMWA</fullName>
            </value>
            <value>
                <fullName>FacebookPPC</fullName>
            </value>
            <value>
                <fullName>LinkedInPPC</fullName>
            </value>
            <value>
                <fullName>Stack Overflow</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>AdTech 2014</fullName>
            </value>
            <value>
                <fullName>App World 2014</fullName>
            </value>
            <value>
                <fullName>Casual Connect 2015</fullName>
            </value>
            <value>
                <fullName>Casual Connect 2016</fullName>
            </value>
            <value>
                <fullName>CES/Appnation 2016</fullName>
            </value>
            <value>
                <fullName>DMEXCO 2015</fullName>
            </value>
            <value>
                <fullName>E3 2016</fullName>
            </value>
            <value>
                <fullName>GDC 2014</fullName>
            </value>
            <value>
                <fullName>GMIC 2014</fullName>
            </value>
            <value>
                <fullName>Nordic Games 2017</fullName>
            </value>
            <value>
                <fullName>PGC 2016</fullName>
            </value>
            <value>
                <fullName>Postback 2016</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>MixRank</fullName>
            </value>
            <value>
                <fullName>Forum</fullName>
            </value>
            <value>
                <fullName>Partner Referral</fullName>
            </value>
            <value>
                <fullName>External Referral</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>Appindex</fullName>
            </value>
            <value>
                <fullName>mobyaffiliates</fullName>
            </value>
            <value>
                <fullName>PGC 2017</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>