force-app/main/default/objects/Opportunity/fields/Linked_Client_Account_Industry__c.field-meta.xml
<CustomField>
    <fullName>Linked_Client_Account_Industry__c</fullName>
    <formula>TEXT(Brand_Name1__r.Industry)</formula>
    <label>Linked Client : Account Industry</label>
    <type>Text</type>
</CustomField>