force-app/main/default/objects/Opportunity/fields/Linked_Client_Account_Name_for_Japan__c.field-meta.xml
<CustomField>
    <fullName>Linked_Client_Account_Name_for_Japan__c</fullName>
    <formula>Brand_Name1__r.Account_Name_for_Japan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Client : Account Name for Japan</label>
    <type>Text</type>
</CustomField>