force-app/main/default/objects/Opportunity/fields/Linked_Client_Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Linked_Client_Account_Record_Type__c</fullName>
    <formula>Brand_Name1__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Client Account Record Type</label>
    <type>Text</type>
</CustomField>