force-app/main/default/objects/Opportunity/fields/Linked_Client_Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Linked_Client_Account_Segment__c</fullName>
    <formula>SUBSTITUTE(TRIM(
IF(INCLUDES(Brand_Name1__r.Account_Segment__c,&quot;Brand&quot;),&quot;Brand&quot;,NULL)&amp;
IF(INCLUDES(Brand_Name1__r.Account_Segment__c,&quot;Performance&quot;),&quot;Performance &quot;,NULL)&amp;
IF(INCLUDES(Brand_Name1__r.Account_Segment__c,&quot;Programmatic&quot;),&quot;Programmatic&quot;,NULL)&amp;
IF(INCLUDES(Brand_Name1__r.Account_Segment__c,&quot;Primary Mediation&quot;),&quot;Primary Mediation&quot;,NULL)&amp;
IF(INCLUDES(Brand_Name1__r.Account_Segment__c,&quot;Mediation&quot;),&quot;Mediation &quot;,NULL)&amp;
IF(INCLUDES(Brand_Name1__r.Account_Segment__c,&quot;Enterprise&quot;),&quot;Enterprise &quot;,NULL)&amp;
IF(INCLUDES(Brand_Name1__r.Account_Segment__c,&quot;Media&quot;),&quot;Media&quot;,NULL)
),&quot; &quot;,&quot;; &quot;)</formula>
    <label>Linked Client : Account Segment</label>
    <type>Text</type>
</CustomField>