force-app/main/default/objects/Opportunity/fields/Linked_Client_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Linked_Client_Account_Status__c</fullName>
    <description>SF-9459</description>
    <formula>TEXT(Brand_Name1__r.Account_Status_Demand__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Client Account Status</label>
    <type>Text</type>
</CustomField>