force-app/main/default/objects/Opportunity/fields/Linked_Client_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Linked_Client_Account_Type__c</fullName>
    <formula>SUBSTITUTE(TRIM( 
IF(INCLUDES(Brand_Name1__r.Account_Type__c ,&quot;Agency&quot;),&quot;Agency&quot;,NULL)&amp; 
IF(INCLUDES(Brand_Name1__r.Account_Type__c ,&quot;Advertiser&quot;),&quot;Advertiser &quot;,NULL)&amp; 
IF(INCLUDES(Brand_Name1__r.Account_Type__c ,&quot;DSP&quot;),&quot;DSP&quot;,NULL)&amp; 
IF(INCLUDES(Brand_Name1__r.Account_Type__c ,&quot;Exchange&quot;),&quot;Exchange&quot;,NULL)&amp; 
IF(INCLUDES(Brand_Name1__r.Account_Type__c ,&quot;SSP&quot;),&quot;SSP &quot;,NULL)&amp; 
IF(INCLUDES(Brand_Name1__r.Account_Type__c ,&quot;Developer	&quot;),&quot;Developer	&quot;,NULL)&amp; 
IF(INCLUDES(Brand_Name1__r.Account_Type__c ,&quot;Data Partner&quot;),&quot;Data Partner&quot;,NULL) 
),&quot; &quot;,&quot;; &quot;)</formula>
    <label>Linked Client: Account Type</label>
    <type>Text</type>
</CustomField>