force-app/main/default/objects/Opportunity/fields/Linked_Client_Billing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Linked_Client_Billing_State_Province__c</fullName>
    <formula>Brand_Name1__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Client Billing State/Province</label>
    <type>Text</type>
</CustomField>