force-app/main/default/objects/Opportunity/fields/Linked_client_ID__c.field-meta.xml
<CustomField>
    <fullName>Linked_client_ID__c</fullName>
    <formula>Brand_Name1__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked client ID</label>
    <type>Text</type>
</CustomField>