force-app/main/default/objects/Opportunity/fields/Linked_Client_Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>Linked_Client_Salesforce_Id__c</fullName>
    <formula>Brand_Name1__r.Saleforce_Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Client InMobi Account ID</label>
    <type>Text</type>
</CustomField>