force-app/main/default/objects/Opportunity/fields/Linked_Client_Theme_Demand__c.field-meta.xml
<CustomField>
    <fullName>Linked_Client_Theme_Demand__c</fullName>
    <description>Field to pull Linked Client Demand at Opportunity level.</description>
    <formula>TEXT(Brand_Name1__r.Theme_Demand__c)</formula>
    <label>Linked Client : Theme - Demand</label>
    <type>Text</type>
</CustomField>