force-app/main/default/objects/Opportunity/fields/Linked_Client_Theme_Supply__c.field-meta.xml
<CustomField>
    <fullName>Linked_Client_Theme_Supply__c</fullName>
    <description>Field to pull Linked Client Supply at Opportunity level.</description>
    <formula>TEXT(Brand_Name1__r.Theme_Supply__c)</formula>
    <label>Linked Client : Theme - Supply</label>
    <type>Text</type>
</CustomField>