force-app/main/default/objects/Opportunity/fields/Linked_Client_Website__c.field-meta.xml
<CustomField>
    <fullName>Linked_Client_Website__c</fullName>
    <description>Field to get the Linked client website on opportunity. 

EISF-2196</description>
    <formula>Brand_Name1__r.Website</formula>
    <label>Linked Client Website</label>
    <type>Text</type>
</CustomField>