force-app/main/default/objects/Opportunity/fields/Make_Good_Count__c.field-meta.xml
<CustomField>
    <fullName>Make_Good_Count__c</fullName>
    <label>Make Good Count</label>
    <summaryFilterItems>
        <field>Insertion_Order__c.IO_Type__c</field>
        <operation>equals</operation>
        <value>Make Good</value>
    </summaryFilterItems>
    <summaryForeignKey>Insertion_Order__c.Opportunity_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>