force-app/main/default/objects/Opportunity/fields/Manager_Approval_Retail__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approval_Retail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager Approval - Retail</label>
    <type>Checkbox</type>
</CustomField>