force-app/main/default/objects/Opportunity/fields/Manager_Approval_Retail_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approval_Retail_Approved_By__c</fullName>
    <label>Manager Approval - Retail Approved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>