force-app/main/default/objects/Opportunity/fields/Manager_Approval_Retail_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approval_Retail_Timestamp__c</fullName>
    <label>Manager Approval - Retail Timestamp</label>
    <type>DateTime</type>
</CustomField>