force-app/main/default/objects/Opportunity/fields/Marketing_Calendar_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Calendar_Rollup__c</fullName>
    <label>Marketing Calendar Rollup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>