force-app/main/default/objects/Opportunity/fields/Media_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Media_Go_Live_Date__c</fullName>
    <label>InMobi Media Go Live Date</label>
    <type>Date</type>
</CustomField>