force-app/main/default/objects/Opportunity/fields/Mediation_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Mediation_Next_Steps__c</fullName>
    <label>Mediation Next Steps</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>