force-app/main/default/objects/Opportunity/fields/Mediation_Partner__c.field-meta.xml
<CustomField>
    <fullName>Mediation_Partner__c</fullName>
    <description>Created as part of Supply 2.0 changes</description>
    <label>Mediation Partner</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Burstly</fullName>
            </value>
            <value>
                <fullName>Admarvel</fullName>
            </value>
            <value>
                <fullName>Mopub</fullName>
            </value>
            <value>
                <fullName>Mobclix</fullName>
            </value>
            <value>
                <fullName>Amobee</fullName>
            </value>
            <value>
                <fullName>Adwhirl</fullName>
            </value>
            <value>
                <fullName>Admeld</fullName>
            </value>
            <value>
                <fullName>mOcean</fullName>
            </value>
            <value>
                <fullName>FreeWheel</fullName>
            </value>
            <value>
                <fullName>Nexage</fullName>
            </value>
            <value>
                <fullName>AdMob</fullName>
            </value>
            <value>
                <fullName>Google DFP via API</fullName>
            </value>
            <value>
                <fullName>Adtech via API</fullName>
            </value>
            <value>
                <fullName>NONE</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>MAX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>